--- a/2.html
+++ b/2.html
@@ -3,14 +3,19 @@
 <head>
 <title>WEB-1 html</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css"> 
+<script src="color.js"></script>
 </head>
 <body>
     <h1><a href="web1_internet.html">Web</a></h1>
+    <input type="button" value="night" onclick="nightDayHandler(this)">
+    <div id="grid">
     <ol>
     <li><a href="1.html">html</a>  </li>
     <li><a href="2.html">css </a> </li>
     <li><a href="3.html">Javascript</a></li>
     </ol>
+    <div id="article">
     <h1>css</h1>
 <p>
     Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. 
@@ -19,5 +24,26 @@
     or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, 
     user interfaces for web applications, and user interfaces for many mobile applications.
 </p>
+</div>
+</div>
+<p><div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://operation.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
 </body>
 </html>
