--- a/web1_internet.html
+++ b/web1_internet.html
@@ -3,19 +3,67 @@
 <head>
 <title>WEB-1 html</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css"> 
+<script src="color.js"></script>
 </head>
 <body>
 <h1><a href="web1_internet.html">Web</a></h1>
+<input type="button" value="night" onclick="nightDayHandler(this)">
+<!-- <input type="button" value="Night" onclick="document.querySelector('body').style.backgroundColor='black';
+document.querySelector('body').style.color='white'
+">
+<input type="button" value="Day" onclick="document.querySelector('body').style.backgroundColor='white';
+document.querySelector('body').style.color='black'
+"> -->
+
+<div id="grid">
 <ol>
 <li><a href="1.html">html</a>  </li>
 <li><a href="2.html">css </a> </li>
 <li><a href="3.html">Javascript</a></li>
 </ol>
-<h1>WEB</h1>
+<div id="article">
+<h1>welcome</h1>
+<img src="malpi.jpeg" width="150px">
+<iframe width="150" height="315" src="https://www.youtube.com/embed/Elixpr8ViEg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.
 [1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. 
 He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.
 [2][3] The Web browser was released outside of CERN in 1991, 
 first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+</div>
+</div>
+<p><div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://operation.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
+<p><!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5fc6001b920fc91564cc4468/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script--></p>
 </body>
 </html>
